--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,10 +25,7 @@
 		"prettier"
 	],
 	"rules": {
-		"indent": [
-			2,
-			"tab"
-		],
+		"indent": "off",
 		"no-tabs": 0,
 		"quotes": [
 			"error",
@@ -70,6 +67,9 @@
 				"ignoreArrowShorthand": false,
 				"ignoreVoidOperator": false
 			}
+		],
+		"@typescript-eslint/no-unused-vars": [
+			"warn"
 		]
 	}
 }
